[package]
name = "rustpatch"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
exe = "0.5.6"
